<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetAlarmActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currentDayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_day"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todaySunriseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_sunrise"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentDayTextView" />

        <TextView
            android:id="@+id/todaySunsetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_sunset"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todaySunriseTextView" />

        <TextView
            android:id="@+id/tomorrowSunriseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow_sunrise"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todaySunsetTextView" />

        <TextView
            android:id="@+id/tomorrowSunsetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow_sunset"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowSunriseTextView" />

        <TextView
            android:id="@+id/setTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/disabled"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowSunsetTextView" />

        <TimePicker
            android:id="@+id/alarmTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setTimeTextView" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/repeatSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmTimePicker" />
        <Spinner
            android:id="@+id/ringtoneSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/ringtones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signalTextView"
            app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

        <TextView
            android:id="@+id/signalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signal"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/ringtoneSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

        <TextView
            android:id="@+id/setImageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/attach_photo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ringtoneSpinner" />

        <ImageView
            android:id="@+id/appliedImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setImageTextView" />

        <ImageButton
            android:id="@+id/setPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="AddPhoto"
            android:src="@android:drawable/ic_menu_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appliedImageView" />

        <ImageButton
            android:id="@+id/openCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TakePhoto"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appliedImageView" />

        <ImageButton
            android:id="@+id/removePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="RemovePhoto"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appliedImageView" />

        <Button
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="SetButtonClick"
            android:text="@string/set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setPhotoButton" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="ResetButtonClick"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setPhotoButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>